# apiAutomationPlayground

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  start-app.cmd
.github/workflows/: ci.yml  deploy.yml  python-app.yml
apiAutomationPlayground/: asgi.py  settings.py  urls.py  views.py  wsgi.py
requirements/: base.txt  dev.txt
shop/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py
users/: middleware.py  urls.py  views.py
